@@ -43,10 +43,4 @@ sub as_pdf {
     return $_[0]->{'val'} ? 'true' : 'false';
 }
 
-sub outxmldeep {
-    my ($self, $fh, $pdf, %opts) = @_;
-
-    $opts{'-xmlfh'}->print('<Bool>' . $self->as_pdf() . "</Bool>\n");
-}
-
 1;
